--- a/detail.html
+++ b/detail.html
@@ -145,7 +145,7 @@
 		</div></center>
 		<hr>
 		<div id="aboutHome" style="margin-left:10px;font-family:AgencyFB;height:auto;width:95%;margin-bottom:20px;">
-			<h5>About this home</h5>
+			<h5>About this House</h5>
 			<p class="isiDetail" style="font-size:1em;font-weight:none;">Comfy little home for family holiday. Another facilities are kitchen, air conditioner in every room, refrigerator, and pantry.</p>
 		</div>
 		<hr>
