--- a/feedback.html
+++ b/feedback.html
@@ -83,7 +83,7 @@
 			<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;">Member since August 2017</p>
 			<form method='post' class="editProf" align="left">
 				<p align="left" style="margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;color:gray;">Feedback</p>
-				<textarea name="txtFeedback" placeholder="Write your opinion..." style="width:90%;height:150px;position:absolute;left:0px;margin-left:20px;padding:10px 10px 10px 10px;"></textarea>
+				<textarea id="txtFeedback" name="feedback" placeholder="Write your opinion..." style="width:90%;height:150px;position:absolute;left:0px;margin-left:20px;padding:10px 10px 10px 10px;"></textarea>
 		</div>
 		
 		<footer style="text-align:right;padding-right:20px;">
