--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
 			<div class='cFormLogin'>
 				<form method='post'>
 						<center class="centerlogin">
-						<input type="text" placeholder="Email" name="user" id="txtUser">
+						<input type="email" placeholder="Email" name="user" id="txtUser">
 						<br>
 						<input type="password" placeholder="Password" name="pass" id="txtPass">
 						<br>
