--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class='cFormLogin'>
 				<form method='post'>
-						<center class="centerlogin"><input type="text" placeholder="Username" name="user" id="txtUser">
+						<center class="centerlogin"><input type="email" placeholder="Email" name="user" id="txtUser">
 						<br>
 						<input type="password" placeholder="Password" name="pass" id="txtPass">
 						<br>
