--- a/next.html
+++ b/next.html
@@ -104,9 +104,9 @@
             </div>
         </div>
 
-		<span class="header-slider">Experiences</span>
+		<span class="header-slider">Near Me</span>
 		<div class='seeMore'><a href="see_more.html" style="text-decoration:none;color:#f94d6e;">See More ></a></div>
-            <div class="horizontal-menu" style="display:absolute;">
+            <div class="horizontal-menu" style="display:absolute;" id="nearme">
             <div class="detailRestoranBtn" style="display:inline-block;">
 				<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
 				<div class="content">
@@ -143,7 +143,7 @@
 
 		<span class="header-slider">Cozy Home</span>
 		<div class='seeMore'><a href="see_more.html" style="text-decoration:none;color:#f94d6e;">See More ></a></div>
-        <div class="horizontal-menu" style="display:absolute;">
+        <div class="horizontal-menu" style="display:absolute;" id="cozyhome">
             <div class="detailRestoranBtn" style="display:inline-block;">
 				<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
 				<div class="content">
@@ -219,18 +219,16 @@
       return num;
   }
   var onSuccess = function(position) {
-        alert('Latitude: '          + position.coords.latitude          + '\n' +
+        /*alert('Latitude: '          + position.coords.latitude          + '\n' +
               'Longitude: '         + position.coords.longitude         + '\n' +
               'Altitude: '          + position.coords.altitude          + '\n' +
               'Accuracy: '          + position.coords.accuracy          + '\n' +
               'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '\n' +
               'Heading: '           + position.coords.heading           + '\n' +
               'Speed: '             + position.coords.speed             + '\n' +
-              'Timestamp: '         + position.timestamp                + '\n');
+              'Timestamp: '         + position.timestamp                + '\n');*/
         latkita = position.coords.latitude;
         longkita = position.coords.longitude;
-        var distance = google.maps.geometry.spherical.computeDistanceBetween(new google.maps.LatLng(latkita, longkita), new google.maps.LatLng(-7.229924, 112.722628));
-        alert("Distance : "+distance);
     };
 
     // onError Callback receives a PositionError object
@@ -253,8 +251,13 @@
         $("#foryou").html($("#foryou").html()+'<div class="detailRestoranBtn" style="display:inline-block;height:auto;"><div class="img-feature"><center><img class="gbr" src="'+data[y].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><div class="heart" style="margin-top:10px;margin-bottom:10px;"><img src="img/heart-full.png" style="width:25px;height:25px"></div><h5><b>'+data[y].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[y].kapasitas+' Orang &bull; '+(Math.floor((google.maps.geometry.spherical.computeDistanceBetween(new google.maps.LatLng(latkita, longkita), new google.maps.LatLng(parseInt(data[y].longlat_rumah.split(" ")[0]),parseInt(data[y].longlat_rumah.split(" ")[1])))/1000)*1000)/1000)+' km</span></div></div>');
         $("#foryou").html($("#foryou").html()+'<div class="detailRestoranBtn" style="display:inline-block;height:auto;"><div class="img-feature"><center><img class="gbr" src="'+data[z].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><div class="heart" style="margin-top:10px;margin-bottom:10px;"><img src="img/heart-full.png" style="width:25px;height:25px"></div><h5><b>'+data[z].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[z].kapasitas+' Orang &bull; '+(Math.floor((google.maps.geometry.spherical.computeDistanceBetween(new google.maps.LatLng(latkita, longkita), new google.maps.LatLng(parseInt(data[z].longlat_rumah.split(" ")[0]),parseInt(data[z].longlat_rumah.split(" ")[1])))/1000)*1000)/1000)+' km</span></div></div>');
       });
+      $.post(server, {'longkita' : longkita , 'latkita': latkita ,'tipe': "ambilNearme"},function(data){
+        data = JSON.parse(data);
+        alert("hai");
+        alert(data[0].distance);
+      });
     }
-    $(document).ready(onDeviceReady);
+    //$(document).ready(onDeviceReady);
     /*
 
     $.post(server, {'tipe': "ambilSemuaRumah"},function(data){
