klik change photo bisa buka windows explore
manage home blm selesai

--- a/becomehost.html
+++ b/becomehost.html
@@ -78,13 +78,28 @@
         </div>
         </ons-toolbar>
 		
-		<div class="contProfile" style="width:100%;height:100%;margin-top:-10px;background-image:url(img/host.jpg);background-size:cover;repeat:no-repeat;">
-			
+		<div class="contProfile" style="width:100%;height:100%;margin-top:-20px;background-image:url(img/host.jpg);background-size:cover;repeat:no-repeat;">
+			<form method='post' class="editProf" align="left">
+				<input type="button" name="btnStart" value="Get Started" style="width:auto;height:40px;background-color:#f94d6e;border-radius:10px;font-size:1.3em;color:white;position:absolute;bottom:80px;right:20px;">
+			</form>
 		</div>
 		
-		<footer style="text-align:right;padding-right:20px;">			
-				<input type="button" name="btnStart" value="Get Started" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
-			</form>
+		<footer style="text-align:right;padding-right:20px;">				
+			<div class="" style="float:left;width:20%;">
+				<a href="#"><img src="img/explore.png" alt="" style="width:100%;height:100%;"></a>
+			</div>
+			<div class="" style="float:left;width:20%;">
+				<a href="favorite.html"><img src="img/favorite.png" alt="" style="width:100%;height:100%;"><br></a>
+			</div>
+			<div class="" style="float:left;width:20%;">
+				<a href="history.html"><img src="img/history.png" alt="" style="width:100%;height:100%;"><br></a>
+			</div>
+			<div class="" style="float:left;width:20%;">
+				<a href="becomehost.html"><img src="img/inbox_active.png" alt="" style="width:100%;height:100%;"><br></a>
+			</div>
+			<div class="" style="float:left;width:20%;">
+				<a href="profile.html"><img src="img/profile.png" alt="" style="width:100%;height:100%;"><br></a>
+			</div>
 		</footer>
   </ons-page>
   </template>
