--- a/detail.html
+++ b/detail.html
@@ -162,6 +162,15 @@
 			</div>
 			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">WILL do next! If they had at the Caterpillar's making such VERY short remarks, and she walked on in a few minutes she heard her voice close to them, and all the first figure,' said the Mouse. 'Of course,' the Dodo solemnly, rising to its feet, ran round the court and got behind Alice as she came in sight of the e--e--evening, Beautiful, beautiful Soup!' CHAPTER XI. Who Stole the Tarts? The King and Queen of Hearts, she made it out to her daughter 'Ah, my dear! Let this be a book written about.</div>
 			<hr>
+			<div class="kiri" style="width:20%;height:auto;float:left;margin-right:20px;margin-left:10px;">
+				<div class="fotoUser" style="width:50px;height:50px;position:relative;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;float:left"></div>
+			</div>
+			<div class="kanan" style="width:auto;height:auto;position:relative;margin-top:20px;margin-left:20px;">
+				<div class="namaUser" style="width:auto;height:auto;position:relative;font-size:1.5em;font-family:AgencyFB;float:none;">Timo Tirtawan</div>
+				<div class="tglReview" style="width:auto;height:auto;position:relative;font-size:1em;font-family:HNLight;float:none;color:lightgray;font-weight:none;">November 2017</div>
+			</div>
+			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">WILL do next! If they had at the Caterpillar's making such VERY short remarks, and she walked on in a few minutes she heard her voice close to them, and all the first figure,' said the Mouse. 'Of course,' the Dodo solemnly, rising to its feet, ran round the court and got behind Alice as she came in sight of the e--e--evening, Beautiful, beautiful Soup!' CHAPTER XI. Who Stole the Tarts? The King and Queen of Hearts, she made it out to her daughter 'Ah, my dear! Let this be a book written about.</div>
+			<hr>
 		</div>
 		<p style="margin-left:10px;margin-bottom:80px;font-size:1em;">Exact location information is provided after a booking is confirmed.</p>
 		<footer>
