--- a/profile.html
+++ b/profile.html
@@ -80,14 +80,12 @@
 		
 		<div class="contProfile" style="width:100%;height:40%;background-color:#f94d6e;">
 			<div class="fotoProfile" style="width:100px;height:100px;position:relative;margin:auto;top:20%;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;margin-bottom:60px;"></div>
-			<p align="center" style="margin-left:10px;font-family:AgencyFB;font-size:1.5em;font-weight:bold;position:relative;color:white">Kenji Andrean &nbsp;<img src="img/edit.png" width="15px" height="15px"></p>
+			<p align="center" style="margin-left:10px;font-family:AgencyFB;font-size:1.5em;font-weight:bold;position:relative;color:white">Kenji Andrean</p>
 			<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;color:white">Member since August 2017</p>
 		</div>
 		<div class="menuProfile" style="width:100%;height:auto;">
 			<hr>
 			<a href="edit_profile.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">View and Edit Profile</div></a>
-			<hr>
-			<a href="becomehost.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Become a Host</div></a>
 			<hr>
 			<a href="feedback.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Give us Feedback</div></a>
 			<hr>
@@ -104,7 +102,7 @@
 				<a href="history.html"><img src="img/history.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<a href="#"><img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br></a>
+				<a href="becomehost.html"><img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<a href="#"><img src="img/profile_active.png" alt="" style="width:100%;height:100%;"><br></a>
