--- a/edit_profile.html
+++ b/edit_profile.html
@@ -79,14 +79,15 @@
         </ons-toolbar>
 		
 		<div class="contProfile" style="width:100%;height:auto;margin-bottom:100px;">
-			<div class="fotoProfile" style="width:100px;height:100px;position:relative;margin:auto;margin-top:20px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;margin-bottom:10px;"></div>
-			<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;"><a href="#">Change Photo</a><p>
-			<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;">Member since August 2017</p>
-			<form method='post' class="editProf" align="left">
+			<form method='post' class="editProf" align="left">			
+				<div class="fotoProfile" style="width:100px;height:100px;position:relative;margin:auto;margin-top:20px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;margin-bottom:10px;"></div>
+				<p id="changePhoto" align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;color:#f94d6e" onclick="upload()">Change Photo</p>
+				<input type="file" name="profileUpload" id="UploadPhoto" style="display:none">
+				<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;">Member since August 2017</p>
 				<p align="left" style="margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;color:gray;">Full name</p>
 				<input type="text" name="txtName" value="Kenji Andrean"><br>
 				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Email</p>
-				<input type="text" name="txtEmail" value="kenjiandrean@gmail.com"><br>
+				<input type="email" name="txtEmail" value="kenjiandrean@gmail.com"><br>
 				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Password</p>
 				<input type="password" name="txtPassword" value="1234asdf"><br>
 				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Gender</p>
@@ -101,13 +102,19 @@
 		
 		<footer style="text-align:right;padding-right:20px;">
 				<input type="button" name="btnBooking" value="Save" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
-				<input type="button" name="btnCancel" value="Cancel" style="width:30%;height:60%;background-color:white;border-radius:10px;font-size:1.5em;color:#f94d6e;top:20%;position:relative;">
 			</form>
 		</footer>
   </ons-page>
   </template>
-	</body>
+	</body>	
+	
   <script type="text/javascript">
+	
+	function upload(){
+		$("#UploadPhoto").click();
+	}
+  
+  
   var server = "http://workastation.hol.es/sdpajax/server.php";
   function getIp() {
       ons.notification.prompt({message: 'Masukkan ip server'}).then(function(answer) {
@@ -139,8 +146,9 @@
           // navigator.vibrate([300, 10, 150, 10, 150]);
       });
       $(document).ready(onDeviceReady());
+	  
     function onDeviceReady(){
-      //getIp();
+      //getIp();		
       $.post(server, {'user': localStorage.getItem("storageName"), 'tipe': 3},function(data){
         data = JSON.parse(data);
         cordova.plugins.notification.local.schedule({
