--- a/favorite.html
+++ b/favorite.html
@@ -112,7 +112,7 @@
 				<a href="history.html"><img src="img/history.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<a href="#"><img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br></a>
+				<a href="becomehost.html"><img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<a href="profile.html"><img src="img/profile.png" alt="" style="width:100%;height:100%;"><br></a>
