--- a/next.html
+++ b/next.html
@@ -59,7 +59,7 @@
     		<div class='cTitle'>
 				<img src='logo.png' width='70%'>
         			<div class='cFormDalam'>
-						<h1><input type="text" id="timo" placeholder="Search"/></h1>
+						<h1><input type="text" id="timoText" placeholder="Search"/><button id="b1">Search</button></h1>
 					</div>
       		</div>
         </div>
@@ -141,9 +141,9 @@
             </div>
         </div>
 
-		<span class="header-slider">Cozy Home</span>
+		<span class="header-slider">High Rating</span>
 		<div class='seeMore'><a href="see_more.html" style="text-decoration:none;color:#f94d6e;">See More ></a></div>
-        <div class="horizontal-menu" style="display:absolute;" id="cozyhome">
+        <div class="horizontal-menu" style="display:absolute;" id="highrating">
             <div class="detailRestoranBtn" style="display:inline-block;">
 				<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
 				<div class="content">
@@ -259,6 +259,14 @@
         $("#nearme").html('<div class="detailRestoranBtn" style="display:inline-block;height:auto;"><div class="img-feature"><center><img class="gbr" src="'+data[0].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><div class="heart" style="margin-top:10px;margin-bottom:10px;"><img src="img/heart-full.png" style="width:25px;height:25px"></div><h5><b>'+data[0].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[0].kapasitas+' Orang &bull; '+(Math.floor(data[0].distance*1000)/1000)+' km</span></div></div>');
         $("#nearme").html($("#nearme").html()+'<div class="detailRestoranBtn" style="display:inline-block;height:auto;"><div class="img-feature"><center><img class="gbr" src="'+data[1].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><div class="heart" style="margin-top:10px;margin-bottom:10px;"><img src="img/heart-full.png" style="width:25px;height:25px"></div><h5><b>'+data[1].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[1].kapasitas+' Orang &bull; '+(Math.floor(data[1].distance*1000)/1000)+' km</span></div></div>');
         $("#nearme").html($("#nearme").html()+'<div class="detailRestoranBtn" style="display:inline-block;height:auto;"><div class="img-feature"><center><img class="gbr" src="'+data[2].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><div class="heart" style="margin-top:10px;margin-bottom:10px;"><img src="img/heart-full.png" style="width:25px;height:25px"></div><h5><b>'+data[2].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[2].kapasitas+' Orang &bull; '+(Math.floor(data[2].distance*1000)/1000)+' km</span></div></div>');
+        $("#nearme").html($("#nearme").html()+'<div class="detailRestoranBtn" style="display:inline-block;height:auto;"><div class="img-feature"><center><img class="gbr" src="'+data[3].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><div class="heart" style="margin-top:10px;margin-bottom:10px;"><img src="img/heart-full.png" style="width:25px;height:25px"></div><h5><b>'+data[3].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[3].kapasitas+' Orang &bull; '+(Math.floor(data[3].distance*1000)/1000)+' km</span></div></div>');
+      });
+      $.post(server, {'longkita' : longkita , 'latkita': latkita ,'tipe': "ambilHighRating"},function(data){
+        data = JSON.parse(data);
+        $("#highrating").html('<div class="detailRestoranBtn" style="display:inline-block;height:auto;"><div class="img-feature"><center><img class="gbr" src="'+data[0].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><div class="heart" style="margin-top:10px;margin-bottom:10px;"><img src="img/heart-full.png" style="width:25px;height:25px"></div><h5><b>'+data[0].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[0].kapasitas+' Orang &bull; '+(Math.floor(data[0].distance*1000)/1000)+' km</span></div></div>');
+        $("#highrating").html($("#highrating").html()+'<div class="detailRestoranBtn" style="display:inline-block;height:auto;"><div class="img-feature"><center><img class="gbr" src="'+data[1].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><div class="heart" style="margin-top:10px;margin-bottom:10px;"><img src="img/heart-full.png" style="width:25px;height:25px"></div><h5><b>'+data[1].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[1].kapasitas+' Orang &bull; '+(Math.floor(data[1].distance*1000)/1000)+' km</span></div></div>');
+        $("#highrating").html($("#highrating").html()+'<div class="detailRestoranBtn" style="display:inline-block;height:auto;"><div class="img-feature"><center><img class="gbr" src="'+data[2].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><div class="heart" style="margin-top:10px;margin-bottom:10px;"><img src="img/heart-full.png" style="width:25px;height:25px"></div><h5><b>'+data[2].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[2].kapasitas+' Orang &bull; '+(Math.floor(data[2].distance*1000)/1000)+' km</span></div></div>');
+        $("#highrating").html($("#highrating").html()+'<div class="detailRestoranBtn" style="display:inline-block;height:auto;"><div class="img-feature"><center><img class="gbr" src="'+data[3].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><div class="heart" style="margin-top:10px;margin-bottom:10px;"><img src="img/heart-full.png" style="width:25px;height:25px"></div><h5><b>'+data[3].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[3].kapasitas+' Orang &bull; '+(Math.floor(data[3].distance*1000)/1000)+' km</span></div></div>');
       });
     }
     $(document).ready(onDeviceReady);
