--- a/history.html
+++ b/history.html
@@ -53,15 +53,15 @@
           Go & Rent
         </div>
         </ons-toolbar>
-		
+
 		<div class="center">
     		<div class='cTitle'>
 				<div class='cFormDalam'>
-					<h1><input type="text" id="timo" placeholder="Search"/></h1>
+					<!--<h1><input type="text" id="timo" placeholder="Search"/></h1>-->
 				</div>
       		</div>
         </div>
-        
+
 		<div style="width:100%;height:calc(100% - 50px);">
 			<div class="horizontal-menu-fav" style="display:absolute;">
 				<div class="detailFavorite" style="display:inline-block;">
@@ -70,7 +70,7 @@
 						<h5><b>Kebab Kings, Dhar...</b></h5>
 						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
 					</div>
-				</div>	
+				</div>
 			</div>
 			<div class="horizontal-menu-fav" style="display:absolute;">
 				<div class="detailFavorite" style="display:inline-block;">
@@ -79,7 +79,7 @@
 						<h5><b>Kebab Kings, Dhar...</b></h5>
 						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
 					</div>
-				</div>	
+				</div>
 			</div>
 			<div class="horizontal-menu-fav" style="display:absolute;">
 				<div class="detailFavorite" style="display:inline-block;">
@@ -88,7 +88,7 @@
 						<h5><b>Kebab Kings, Dhar...</b></h5>
 						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
 					</div>
-				</div>	
+				</div>
 			</div>
 			<div class="horizontal-menu-fav" style="display:absolute;">
 				<div class="detailFavorite" style="display:inline-block;">
@@ -97,7 +97,7 @@
 						<h5><b>Kebab Kings, Dhar...</b></h5>
 						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
 					</div>
-				</div>	
+				</div>
 			</div>
 		</div>
 
